# archie-code

./: .gitignore  CONTRIBUTING.md  Modelfile.archie-coder  README.md  install.sh  pyproject.toml
archie-tui/: .gitignore  Makefile  client.go  go.mod  main.go  messages.go  model.go  (+1 more)
archie_engine/: MANIFEST.in  __init__.py  __main__.py  config.py  database.py  dispatch_strategy.py  engine.py  inference.py  intent.py  learning.py  personality.py  pyproject.toml  router.py  server.py  session.py  state_sync.py
archie_engine/claude/: __init__.py  context_bridge.py  escalation.py  mcp_server.py
archie_engine/hub/: __init__.py  auth.py  connector.py  heartbeat.py  inbound.py  sync.py  system_info.py
archie_engine/skills/: __init__.py  executor.py  loader.py  skill.py
archie_engine/skills/community/: commit.md  debug.md  explain.md  refactor.md  review.md  test.md
archie_engine/tests/: conftest.py  test_auth.py  test_claude_integration.py  test_connector.py  test_context_bridge.py  test_database.py  test_dispatch_strategy.py  test_engine.py  test_escalation.py  test_executor.py  test_file_ops.py  test_git_ops.py  test_heartbeat.py  test_hub_integration.py  test_inbound.py  test_inference.py  test_intent.py  test_learning.py  test_loader.py  test_mcp_server.py  test_personality.py  test_router.py  test_server.py  test_session.py  test_shell_ops.py  test_skill.py  test_skill_integration.py  test_skill_registry.py  test_state_sync.py  test_sync.py  test_system_info.py  test_tools.py
archie_engine/tools/: __init__.py  base.py  file_ops.py  git_ops.py  shell_ops.py
(+6 files in other folders)
