[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archie-engine"
version = "0.1.0"
description = "ARCHIE Code CLI — Python engine daemon"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/KytranKatarn/archie-code"
Repository = "https://github.com/KytranKatarn/archie-code"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
archie-engine = "archie_engine.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
